hotelReservation/kubernetes/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
    external-dns.alpha.kubernetes.io/hostname: frontend.hotelreservation.com
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
      nodePort: 30981
  selector:
    io.kompose.service: frontend
status:
  loadBalancer: {}
